[gd_scene load_steps=8 format=2]

[ext_resource path="res://Game/Level/assets/mountains.png" type="Texture" id=1]
[ext_resource path="res://Menu/MainMenu/assets/main_menu/title.png" type="Texture" id=2]
[ext_resource path="res://components/buttons/TextureIconButton.tscn" type="PackedScene" id=3]
[ext_resource path="res://Menu/MainMenu/assets/main_menu/character_drawster.png" type="Texture" id=4]
[ext_resource path="res://Menu/MainMenu/assets/main_menu/bg-color.png" type="Texture" id=7]
[ext_resource path="res://Menu/MainMenu/assets/main_menu/character_sataur.png" type="Texture" id=8]
[ext_resource path="res://Menu/MainMenu/MainMenu.gd" type="Script" id=11]

[node name="MainMenu" type="MarginContainer"]
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -722.0
margin_right = 722.0
custom_constants/margin_right = 120
custom_constants/margin_top = 80
custom_constants/margin_left = 120
custom_constants/margin_bottom = 80
script = ExtResource( 11 )
__meta__ = {
"_edit_use_anchors_": true
}
game_tscn = "res://Game/Game.tscn"

[node name="bg-color" type="Sprite" parent="."]
modulate = Color( 1, 1, 1, 0.929412 )
position = Vector2( 723.065, 383.792 )
texture = ExtResource( 7 )

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_left = 120.0
margin_top = 80.0
margin_right = 1384.0
margin_bottom = 688.0
rect_min_size = Vector2( 1200, 600 )

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer"]
margin_right = 400.0
margin_bottom = 608.0
rect_min_size = Vector2( 400, 600 )

[node name="Logo" type="TextureRect" parent="HBoxContainer/VBoxContainer"]
margin_right = 400.0
margin_bottom = 52.0
texture = ExtResource( 2 )

[node name="MenuOptions" type="VBoxContainer" parent="HBoxContainer/VBoxContainer"]
margin_top = 56.0
margin_right = 400.0
margin_bottom = 590.0
size_flags_vertical = 15
custom_constants/separation = 30
alignment = 1

[node name="Play" parent="HBoxContainer/VBoxContainer/MenuOptions" instance=ExtResource( 3 )]
modulate = Color( 1, 1, 1, 0.4 )
margin_left = 0.0
margin_top = 70.0
margin_right = 400.0
margin_bottom = 146.0
hint_tooltip = "Play game button"
expand = false
title = "Play"

[node name="BikeMenu" parent="HBoxContainer/VBoxContainer/MenuOptions" instance=ExtResource( 3 )]
margin_left = 0.0
margin_top = 176.0
margin_right = 400.0
margin_bottom = 252.0
hint_tooltip = "Bike menu button"
expand = false
title = "Bike menu"

[node name="LevelMenu" parent="HBoxContainer/VBoxContainer/MenuOptions" instance=ExtResource( 3 )]
margin_left = 0.0
margin_top = 282.0
margin_right = 400.0
margin_bottom = 358.0
hint_tooltip = "Level menu button"
expand = false
title = "Level menu"

[node name="Options" parent="HBoxContainer/VBoxContainer/MenuOptions" instance=ExtResource( 3 )]
margin_left = 0.0
margin_top = 388.0
margin_right = 400.0
margin_bottom = 464.0
hint_tooltip = "Options menu button"
expand = false
title = "Options"

[node name="Label" type="Label" parent="HBoxContainer/VBoxContainer"]
margin_top = 594.0
margin_right = 400.0
margin_bottom = 608.0
text = "version: 1.0.0"

[node name="CenterContainer" type="CenterContainer" parent="HBoxContainer"]
margin_left = 404.0
margin_right = 1264.0
margin_bottom = 608.0
rect_min_size = Vector2( 860, 600 )
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="CurrentTrack" type="NinePatchRect" parent="HBoxContainer/CenterContainer"]
modulate = Color( 1, 1, 1, 0.317647 )
margin_left = 30.0
margin_top = 4.0
margin_right = 830.0
margin_bottom = 604.0
rect_min_size = Vector2( 800, 600 )
texture = ExtResource( 1 )

[node name="Characters" type="HBoxContainer" parent="HBoxContainer/CenterContainer"]
margin_left = 30.0
margin_top = 4.0
margin_right = 830.0
margin_bottom = 604.0
rect_min_size = Vector2( 800, 600 )
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 40
alignment = 1

[node name="Sataur" type="TextureRect" parent="HBoxContainer/CenterContainer/Characters"]
modulate = Color( 1, 1, 1, 0.258824 )
margin_left = 9.0
margin_right = 292.0
margin_bottom = 600.0
texture = ExtResource( 8 )

[node name="Drawster" type="TextureRect" parent="HBoxContainer/CenterContainer/Characters"]
modulate = Color( 1, 1, 1, 0.258824 )
margin_left = 332.0
margin_top = 198.0
margin_right = 791.0
margin_bottom = 600.0
size_flags_vertical = 8
texture = ExtResource( 4 )

[connection signal="pressed" from="HBoxContainer/VBoxContainer/MenuOptions/BikeMenu" to="." method="_on_BikeMenu_pressed"]
[connection signal="pressed" from="HBoxContainer/VBoxContainer/MenuOptions/LevelMenu" to="." method="_on_LevelMenu_pressed"]
[connection signal="pressed" from="HBoxContainer/VBoxContainer/MenuOptions/Options" to="." method="_on_Options_pressed"]
